--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@aws-sdk/client-chime-sdk-meetings": "^3.879.0",
 		"@radix-ui/react-slot": "^1.2.3",
 		"@supabase/supabase-js": "^2.56.0",
+		"@types/uuid": "^10.0.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"drizzle-orm": "^0.44.5",
@@ -23,7 +24,8 @@
 		"postgres": "^3.4.7",
 		"react": "19.1.0",
 		"react-dom": "19.1.0",
-		"tailwind-merge": "^3.3.1"
+		"tailwind-merge": "^3.3.1",
+		"uuid": "^11.1.0"
 	},
 	"devDependencies": {
 		"@tailwindcss/postcss": "^4",
