--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@types/uuid": "^10.0.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"dotenv": "^17.2.1",
 		"drizzle-orm": "^0.44.5",
 		"lucide-react": "^0.542.0",
 		"next": "15.5.2",
