--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
 		"@aws-sdk/client-chime-sdk-meetings": "^3.879.0",
 		"@radix-ui/react-slot": "^1.2.3",
 		"@supabase/supabase-js": "^2.56.0",
+		"@types/styled-components": "^5.1.34",
 		"@types/uuid": "^10.0.0",
+		"amazon-chime-sdk-component-library-react": "^3.11.0",
+		"amazon-chime-sdk-js": "^3.28.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"dotenv": "^17.2.1",
@@ -25,6 +28,7 @@
 		"postgres": "^3.4.7",
 		"react": "19.1.0",
 		"react-dom": "19.1.0",
+		"styled-components": "^6.1.19",
 		"tailwind-merge": "^3.3.1",
 		"uuid": "^11.1.0"
 	},
