--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 		"dev": "next dev --turbopack",
 		"build": "next build --turbopack",
 		"start": "next start",
+		"lint": "next lint",
 		"typecheck": "tsc --noEmit",
 		"db:generate": "drizzle-kit generate",
 		"db:push": "drizzle-kit push",
@@ -38,6 +39,8 @@
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
 		"drizzle-kit": "^0.31.4",
+		"eslint": "^9.34.0",
+		"eslint-config-next": "^15.5.2",
 		"tailwindcss": "^4",
 		"tw-animate-css": "^1.3.7",
 		"typescript": "^5"
