--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 		"dev": "next dev --turbopack",
 		"build": "next build --turbopack",
 		"start": "next start",
-		"lint": "next lint",
+		"lint": "npx eslint ./src",
 		"typecheck": "tsc --noEmit",
 		"db:generate": "drizzle-kit generate",
 		"db:push": "drizzle-kit push",
@@ -34,6 +34,7 @@
 		"uuid": "^11.1.0"
 	},
 	"devDependencies": {
+		"@next/eslint-plugin-next": "^15.5.2",
 		"@tailwindcss/postcss": "^4",
 		"@types/node": "^20",
 		"@types/react": "^19",
