--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"@types/node": "^20",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
+		"babel-plugin-react-compiler": "19.1.0-rc.3",
 		"drizzle-kit": "^0.31.4",
 		"eslint": "^9.34.0",
 		"eslint-config-next": "^15.5.2",
