--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	},
 	"dependencies": {
 		"@aws-sdk/client-chime-sdk-meetings": "^3.879.0",
+		"@aws-sdk/client-rds-data": "^3.879.0",
 		"@clerk/nextjs": "^6.31.6",
 		"@radix-ui/react-slot": "^1.2.3",
 		"@supabase/supabase-js": "^2.56.0",
