--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@types/uuid": "^10.0.0",
 		"amazon-chime-sdk-component-library-react": "^3.11.0",
 		"amazon-chime-sdk-js": "^3.28.0",
+		"browser-detect": "^0.2.28",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"dotenv": "^17.2.1",
