--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@aws-sdk/client-chime-sdk-meetings": "^3.879.0",
 		"@aws-sdk/client-rds-data": "^3.879.0",
 		"@clerk/nextjs": "^6.31.6",
+		"@radix-ui/react-checkbox": "^1.3.3",
 		"@radix-ui/react-select": "^2.2.6",
 		"@radix-ui/react-slot": "^1.2.3",
 		"@supabase/supabase-js": "^2.56.0",
